# cpp-starter

./: .gitmodules  CMakeLists.txt  conanfile.py
cmake/: Submodules.cmake
src/: CMakeLists.txt  main.cpp
